--- a/templates/units/unitslist.html
+++ b/templates/units/unitslist.html
@@ -96,12 +96,12 @@
                                     </div>
                                     <!-- /.card-body -->
                                     <div class="card-footer">
-                                        <ul class="nav nav-pills card-header-pills">
-                                            <li class="nav-item">
-                                                <a class="nav-link active" href="{% url 'newunits' %}">Nueva Unidad</a>
-                                            </li>
 
-                                        </ul>
+                                        <a class="btn btn-info btn-sm float-left active" href="{% url 'newunits' %}">
+                                        <i class="fas fa-pencil-alt">
+                                        </i>
+                                        Nueva Unidad
+                                        </a>
                                         <button type="button" onclick="history.back()" class="btn btn-default float-right">Cancelar</button>
                                     </div>
 
