--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
         <li class="nav-item dropdown user-menu">
           <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
             <img src="{% static 'img/user2-160x160.jpg' %}" class="user-image img-circle elevation-2" alt="User Image">
-            <span class="d-none d-md-inline">Alexander Pierce</span>
+            <span class="d-none d-md-inline">{{datos.name}} - {{datos.mail}}</span>
           </a>
           <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <!-- User image -->
@@ -95,7 +95,6 @@
               <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
 
               <p>
-                {{datos.name}} - {{datos.mail}}
                 <small>Inicio de sesion {{datos.login}}</small>
               </p>
             </li>
