--- a/templates/role/role.html
+++ b/templates/role/role.html
@@ -28,29 +28,35 @@
                         <div class="row">
                             <div class="card">
                                 <div class="card-header"></div>
-                                <form action="">
+                                <form method="post" action="{% if datos.menu == 'editrole' %} {% url 'updaterole' id=datos.rollist.rolId %} {% endif %} {% if datos.menu == 'newrole' %} {% url 'createnewrole' %} {% endif %}">
+                                {% csrf_token %}
                                     <!-- card-body -->
                                     <div class="card card-body">
                                         <div class="form-group col-md-6">
                                             <label for="nombretarea">Nombre</label>
-                                            <input type="text" class="form-control" id="nombretarea"
-                                                placeholder="Nombre" />
+                                            <input type="text" class="form-control" name="nombrerol"
+                                            {% if datos.menu == 'newrole' %} placeholder="Nombre" {% endif %} 
+                                            {% if datos.menu == 'viewrole' %} disabled value = "{{datos.rollist.nombreRol}}"{% endif %}
+                                            {% if datos.menu == 'editrole' %} value = "{{datos.rollist.nombreRol}}"{% endif %}
+                                            />
                                         </div>
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 <!-- textarea -->
                                                 <div class="form-group">
                                                     <label>Descripción</label>
-                                                    <textarea class="form-control" rows="3" placeholder="..."
-                                                        style="resize: none;"></textarea>
+                                                    <textarea class="form-control" rows="3" name="descriptrole" {% if datos.menu != 'viewrole' %} placeholder = "Descripción" {% endif %} 
+                                                        style="resize: none;" {% if datos.menu == 'viewrole' %} disabled {% endif %}>{{datos.rollist.descripcion}}</textarea>
+                                                
+
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <!-- /.card-body -->
                                     <div class="card-footer">
-                                        <button type="submit" class="btn btn-info">Guardar</button>
-                                        <button type="submit" class="btn btn-default float-right">Cancelar</button>
+                                        <button type="submit" class="btn btn-info" value="OK" {% if datos.menu == 'viewrole' %} hidden {% endif %}>Guardar</button>
+                                        <button type="button" onclick="history.back()" class="btn btn-default float-right">Cancelar</button>
                                     </div>
 
                                 </form>
