--- a/templates/role/rolelist.html
+++ b/templates/role/rolelist.html
@@ -60,29 +60,32 @@
                                                         </tr>
                                                     </thead>
                                                     <tbody>
+                                                    {% for roles in datos.roles %}
+
                                                         <tr>
-                                                            <td class="text-center">183</td>
-                                                            <td class="text-center">Administrador</td>
-                                                            <td class="text-center">Perfil del administrador del sistema</td>
+                                                            <td class="text-center">{{roles.rolId}}</td>
+                                                            <td class="text-center">{{roles.nombreRol}}</td>
+                                                            <td class="text-center">{{roles.descripcion}}</td>
                                                             <td class="text-center">
-                                                                <a class="btn btn-primary btn-sm" href="#">
+                                                                <a class="btn btn-primary btn-sm" href="{% url 'viewrole' id=roles.rolId%}">
                                                                     <i class="fas fa-folder">
                                                                     </i>
                                                                     View
                                                                 </a>
-                                                                <a class="btn btn-info btn-sm" href="#">
+                                                                <a class="btn btn-info btn-sm" href="{% url 'editrole' id=roles.rolId %}">
                                                                     <i class="fas fa-pencil-alt">
                                                                     </i>
                                                                     Edit
                                                                 </a>
-                                                                <a class="btn btn-danger btn-sm" href="#">
+                                                                <a class="btn btn-danger btn-sm" href="#" onclick="confirmOption('{{roles.nombreRol}}', '/dashboard/deleterole/{{roles.rolId}}')">
                                                                     <i class="fas fa-trash">
                                                                     </i>
-                                                                    Delete
+                                                                    Eliminar
                                                                 </a>
 
                                                             </td>
                                                         </tr>
+                                                    {% endfor %}
 
                                                     </tbody>
                                                 </table>
@@ -93,13 +96,12 @@
                                     </div>
                                     <!-- /.card-body -->
                                     <div class="card-footer">
-                                        <ul class="nav nav-pills card-header-pills">
-                                            <li class="nav-item">
-                                                <a class="nav-link active" href="{% url 'workflownew' %}">Nuevo Flujo</a>
-                                            </li>
-
-                                        </ul>
-                                        <button type="submit" class="btn btn-default float-right">Cancelar</button>
+                                        <a class="btn btn-info btn-sm float-left active" href="{% url 'newrole' %}">
+                                        <i class="fas fa-pencil-alt">
+                                        </i>
+                                        Nuevo rol
+                                        </a>
+                                        <button type="button" class="btn btn-default float-right" onclick="history.back()">Cancelar</button>
                                     </div>
 
                                 </form>
@@ -111,5 +113,11 @@
         </section>
     </div>
 </div>
-
+<script>
+  function confirmOption(opcion, direccion){
+    if(confirm("Esta seguro que desea Eliminar el registro "+ opcion)){
+      window.location.href = direccion;
+    }
+  }
+</script>
 {% endblock content %}
