--- a/templates/users/newuser.html
+++ b/templates/users/newuser.html
@@ -5,14 +5,26 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
+                        {% if datos.menu == 'editusers' %}
+                        <h1>Actualizacion de usuarios</h1>
+                        {% endif %}
+                        {% if datos.menu == 'newuser' %}
                         <h1>Creacion de usuarios</h1>
+                        {% endif %}
+
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item">
                                 <a href="{% url 'dashboard' %}">Home</a>
                             </li>
+                            {% if datos.menu == 'editusers' %}
+                            <li class="breadcrumb-item active">Actualizacion de usuarios</li>
+                            {% endif %}
+                            {% if datos.menu == 'newuser' %}
                             <li class="breadcrumb-item active">Creacion de usuarios</li>
+                            {% endif %}
+
                         </ol>
                     </div>
                 </div>
@@ -26,73 +38,88 @@
                         <div class="row">
                             <div class="card">
                                 <div class="card-header"></div>
-                                <form method="post" action="{% url 'createnewuser' %}">
-                                {% csrf_token %}
+                                <form method="post" action="{% if datos.menu == 'editusers' %} {% url 'updateusers' id=datos.user.rutUsuario %} {% endif %} {% if datos.menu == 'newuser' %} {% url 'createnewuser' %} {% endif %}">
+                                    {% csrf_token %}
                                     <!-- card-body -->
                                     <div class="card card-body">
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="nombretarea">Nombre</label> {% endcomment %}
-                                            <input type="text" class="form-control" name="rut" placeholder="Rut" />
+                                            <input type="text" class="form-control" name="rut" placeholder="Rut" value="{% if datos.menu == 'editusers' %}{{ datos.user.rutUsuario}}{% endif %}"/>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="nombretarea">Nombre</label> {% endcomment %}
-                                            <input type="text" class="form-control" name="name" placeholder="Nombre" />
+                                            <input type="text" class="form-control" name="name" placeholder="Nombre" value="{% if datos.menu == 'editusers' %}{{ datos.user.nombreUsuario}}{% endif %}"/>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="nombretarea">Segundo Nombre</label>
-                                            {% endcomment %}
                                             <input type="text" class="form-control" name="secondName"
-                                                placeholder="Segundo Nombre" />
+                                                placeholder="Segundo Nombre" value="{% if datos.menu == 'editusers' %}{{ datos.user.segundoNombre}}{% endif %}"/>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="nombretarea">Apellido</label> {% endcomment %}
                                             <input type="text" class="form-control" name="lastName"
-                                                placeholder="Apellido" />
+                                                placeholder="Apellido" value="{% if datos.menu == 'editusers' %}{{ datos.user.apellidoUsuario}}{% endif %}"/>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="nombretarea">Segundo Apellido</label>
-                                            {% endcomment %}
                                             <input type="text" class="form-control" name="secondlastName"
-                                                placeholder="Segundo Apellido" />
+                                                placeholder="Segundo Apellido" value="{% if datos.menu == 'editusers' %}{{ datos.user.segundoApellido}}{% endif %}"/>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="nombretarea">Telefono</label> {% endcomment %}
                                             <input type="number" class="form-control" name="phoneNumber"
-                                                placeholder="Telefono" />
+                                                placeholder="Telefono" value="{% if datos.menu == 'editusers' %}{{ datos.user.numTelefono}}{% endif %}"/>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="Proceso">Rol</label> {% endcomment %}
+                                            {% if datos.menu == 'editusers' %}
                                             <select class="form-control" name="role">
-                                                <option selected>1</option>
-                                                <option>2</option>
-                                                <option>3</option>
+                                                {% for roles in datos.rol %}
+                                                <option {% if roles.rolId == datos.user.idRolUsuario  %} selected  {% endif %} value="{{roles.rolId}}">{{roles.nombreRol}}</option>
+                                                {% endfor %}
                                             </select>
+                                            {% endif %}
+                                            {% if datos.menu == 'newuser' %}
+                                            <select class="form-control" name="role">
+                                                {% for roles in datos.rol %}
+                                                <option {% if roles.rolId == datos.user.idRolUsuario  %} selected  {% endif %} value="{{roles.rolId}}">{{roles.nombreRol}}</option>
+                                                {% endfor %}
+                                            </select>
+                                            {% endif %}
                                         </div>
-
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="Proceso">Unidad Interna</label> {% endcomment %}
+                                            {% if datos.menu == 'editusers' %}
                                             <select class="form-control" name="unidadInterna">
-                                                <option selected>1</option>
-                                                <option>2</option>
-                                                <option>3</option>
+                                                {% for unidades in datos.unidad %}
+                                                
+                                                <option {% if unidades.idUnidadInterna == datos.user.idUnidadInternaUsuario  %} selected {% endif %}value="{{unidades.idUnidadInterna}}">{{unidades.nombreUnidad}}
+                                                </option>
+                                                
+                                                {% endfor %}
                                             </select>
+                                            {% endif %}
+                                            {% comment %} {% if datos.menu == 'viewusers' %}
+                                            <div class="form-group col-md-6">
+                                                <input type="number" class="form-control" name="unidadInterna">
+                                                {% for i in datos.unidad %}
+                                                {% if i.idUnidadInterna == datos.user.idUnidadInternaUsuario  %}
+                                                {{i.nombreUnidad}}
+                                                {% endif %}
+                                                {% endfor %}
+                                                </input>
+                                            </div>
+                                            {% endif %} {% endcomment %}
+
                                         </div>
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="exampleInputEmail1">Email address</label>
-                                            {% endcomment %}
-                                            <input type="email" class="form-control" name="email"
-                                                placeholder="Email">
+                                            <input type="email" class="form-control" name="email" placeholder="Email" value="{% if datos.menu == 'editusers' %}{{ datos.user.correoElectronico}}{% endif %}"></input>
                                         </div>
+                                        
+                                        {% if datos.menu == 'newuser' %}
                                         <div class="form-group col-md-6">
-                                            {% comment %} <label for="exampleInputPassword1">Password</label>
-                                            {% endcomment %}
                                             <input type="password" class="form-control" name="password"
                                                 placeholder="Password" />
                                         </div>
+                                        {% endif %}
                                     </div>
                                     <!-- /.card-body -->
                                     <div class="card-footer">
-                                        <button type="submit" class="btn btn-info" value="OK">Guardar</button>
+                                        <button type="submit" class="btn btn-info"
+                                            value="OK">{% if datos.menu == 'editusers' %}Actualizar{% endif %}
+                                            {% if datos.menu == 'newuser' %}Guardar{% endif %}</button>
                                         <button type="submit" class="btn btn-default float-right">Cancelar</button>
                                     </div>
 
