--- a/templates/users/userdetails.html
+++ b/templates/users/userdetails.html
@@ -38,7 +38,24 @@
 
                                 <h3 class="profile-username text-center"></h3>
 
-                                <p class="text-muted text-center">Software Engineer</p>
+                                <p class="text-muted text-center">{{datos.user.nombreUsuario}} {{datos.user.apellidoUsuario}}</p>
+
+                                <ul class="list-group list-group-unbordered mb-3">
+                                    <li class="list-group-item">
+                                        Rut: <p class="float-right">{{datos.user.rutUsuario}}</p>
+                                    </li>
+                                    <li class="list-group-item">
+                                        Email: <p class="float-right">{{datos.user.correoElectronico}}</p>
+                                    </li>
+                                    <li class="list-group-item">
+                                        Cargo: <p class="float-right">{{datos.user.idRolUsuario}}</p>
+                                    </li>
+                                    <li class="list-group-item">
+                                        Unidad: <p class="float-right">{{datos.user.idUnidadInternaUsuario}}</p>
+                                    </li>
+                                </ul>
+                                
+                                
 
                                 <ul class="list-group list-group-unbordered mb-3">
                                     <li class="list-group-item">
@@ -51,8 +68,6 @@
                                         <b>Tareas Asignadas</b> <a class="float-right">452</a>
                                     </li>
                                 </ul>
-
-                                <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
                             </div>
                             <!-- /.card-body -->
                         </div>
