se crea template de tarea subordinada

--- a/templates/base.html
+++ b/templates/base.html
@@ -220,6 +220,15 @@
                   </a>
                 </li>
                 <li class="nav-item">
+                  <a href="{% url 'tareasubordinada' %}" class="nav-link {% if datos.menu == 'tareasubordinada' %} active {% endif %}">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>
+                      Tareas subordinadas
+                      <i class="right fas"></i>
+                    </p>
+                  </a>
+                </li>
+                <li class="nav-item">
                   <a href="" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>
