CRUD Tarea Subordinada Finalizado

--- a/templates/base.html
+++ b/templates/base.html
@@ -220,10 +220,10 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="{% url 'tareasubordinada' %}" class="nav-link {% if datos.menu == 'tareasubordinada' %} active {% endif %}">
+                  <a href="{% url 'TareaSubordinadaSection' %}">
                     <i class="far fa-circle nav-icon"></i>
                     <p>
-                      Tareas subordinadas
+                      Lista de Tareas Subordinadas
                       <i class="right fas"></i>
                     </p>
                   </a>
