--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -59,7 +59,7 @@
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
+            <button type="submit" class="btn btn-primary btn-block">Iniciar Sesión</button>
           </div>
           <!-- /.col -->
         </div>
