--- a/templates/subordinatetask/subordinatetask.html
+++ b/templates/subordinatetask/subordinatetask.html
@@ -64,9 +64,68 @@
                     </div>
                 </div>
             </div>
-        </section>
 
+            <!--Sección de Listado de Tareas-->
+        <section class="content">
+            <!-- Default box -->
+            <div class="card">
+              <div class="card-header">
+                <ul class="nav nav-pills card-header-pills"></ul>
+                <div class="card-tools">
+                  <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                </div>
+              </div>
+              <div class="card-body p-0">
+                  <table class="table table-hover projects">
+                      <thead>
+                          <tr>
+                                <th style="width: 1%">
+                                    Id                                     
+                                </th>
+                                <th style="width: 20%">
+                                    Rut Encargado
+                                </th>
+                                <th style="width: 30%">
+                                    Nombre
+                                </th>
+                                <th style="width: 30%">
+                                    Descripción
+                                </th>
+                                <th style="width: 30%">
+                                    Fecha Plazo
+                                </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                        {% for tarea in data.tarea %}
+                          <tr>        
+                            <td>
+                                {{tarea.idTarea}}
+                            </td>
+                            <td>
+                                {{tarea.fkRutUsuario}}
+                            </td>
+                            <td>
+                                {{tarea.nombreTarea}}
+                            </td>
+                            <td>
+                                {{tarea.descripcionTarea}}
+                            </td>
+                            <td>
+                                {{tarea.fechaPlazo}}
+                            </td>
+                          </tr>
+                        {% endfor %}
+                      </tbody>
+                  </table>
+              </div>
+            </div>
+          </section>
+
+        </section>
+        
     </div>
 </div>
-
 {% endblock content %}
